--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,900&display=swap');
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
   padding: 0;
   margin: 0;
@@ -22,10 +22,12 @@ body {
 
 #root {
   height: 100%;
+  overflow-y: scroll;
 }
 
 .background {
-  position: absolute;
+  /* position: absolute; */
+  position: fixed;
   top: 0;
   bottom: 0;
   width: 100%;
