--- a/src/screens/styles/schedule.module.css
+++ b/src/screens/styles/schedule.module.css
@@ -7,6 +7,12 @@
   height: 75%;
 }
 
+@media screen and (max-width: 1200px) {
+  .container {
+    flex-direction: column;
+  }
+}
+
 .container {
   width: 70%;
   /* max-width: 700px; */
