--- a/src/screens/styles/list.module.css
+++ b/src/screens/styles/list.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding-top: 5%;
+  padding-top: 3%;
   align-items: center;
   height: 75%;
 }
@@ -67,6 +67,14 @@
   border-radius: 10px;
   display: block;
 }
+.buttons a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
 
 .edit:hover {
   background-position: right center; /* change the direction of the change here */
@@ -77,7 +85,9 @@
 .buttons {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .delete {
