--- a/src/screens/styles/list.module.css
+++ b/src/screens/styles/list.module.css
@@ -66,6 +66,7 @@
   box-shadow: 0 0 20px #eee;
   border-radius: 10px;
   display: block;
+  position: relative;
 }
 .buttons a {
   position: absolute;
